Scafolding from Projects

--- a/Source/HelloOpc/HelloOpc.csproj
+++ b/Source/HelloOpc/HelloOpc.csproj
@@ -46,6 +46,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IotGrid.OpcClient\IotGrid.OpcClient.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
